Add SELF 2020 talk

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "presentations/2019-06-16_jenkins_101/reveal.js"]
 	path = presentations/2019-06-16_jenkins_101/reveal.js
 	url = https://github.com/hakimel/reveal.js
+[submodule "presentations/2020-06-13_automation_101_ansible/reveal.js"]
+	path = presentations/2020-06-13_automation_101_ansible/reveal.js
+	url = https://github.com/hakimel/reveal.js
